directory contrast resolved

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -389,4 +389,5 @@ textarea {
 #directory-container section a{
     color: #000051;
     font-weight: bold;
+    word-wrap: break-word;
 }
